erDiagram
    users ||--o{ user_projects : "asignado"
    projects ||--o{ user_projects : "incluye"
    users ||--o{ user_refresh_tokens : "sesion"
    users ||--o{ user_activity_log : "audita"
    projects ||--o{ project_field_definitions : "campos"
    api_credentials }o--|| projects : "scope_opcional"

    users {
        int id PK
        varchar email UK
        varchar nombre
        varchar password_hash
        enum role
        bool active
        timestamp created_at
    }

    projects {
        int id PK
        varchar nombre
        varchar slug UK
        enum type
        varchar emoji
        varchar logo_url
        varchar logo_key
        varchar producto_label
        varchar producto_label_plural
        int dias_alerta_inactividad
        varchar webhook_api_key
        bool active
    }

    user_projects {
        int user_id FK
        int project_id FK
    }

    user_refresh_tokens {
        int id PK
        int user_id FK
        varchar token_hash
        timestamp expires_at
    }

    user_activity_log {
        int id PK
        int user_id FK
        varchar action
        jsonb metadata
        timestamp created_at
    }

    project_field_definitions {
        int id PK
        int project_id FK
        varchar field_key
        varchar label
        enum type
        bool required
        varchar grupo
        int orden
        jsonb options
    }

    api_credentials {
        int id PK
        int project_id FK
        varchar service
        bytea encrypted_value
        bytea iv
        bytea auth_tag
        bool active
    }
